Extend troubleshooting section with some more common issues